--- a/SailScores.Web/Views/Shared/Error.cshtml
+++ b/SailScores.Web/Views/Shared/Error.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
+<h1 class="text-danger">Oops.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if (Model.ShowRequestId)
@@ -13,10 +13,9 @@
     </p>
 }
 
-<h3>Development Mode</h3>
+<h3>
+    Don't worry, it's probably us, not you.
+</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
+    We've logged the error and will let people know that something went wrong. If they're not out sailing.
 </p>
