--- a/SailScores.Web/Views/Competitor/Delete.cshtml
+++ b/SailScores.Web/Views/Competitor/Delete.cshtml
@@ -53,7 +53,7 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
-        <input type="submit" value="Delete" class="btn btn-primary" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-controller="Admin"
            asp-action="Index"
            asp-fragment="competitors"
