Scheduled and Canceled Races

--- a/SailScores.Web/Views/Race/Index.cshtml
+++ b/SailScores.Web/Views/Race/Index.cshtml
@@ -48,7 +48,7 @@
                         </span>
                         <span class="d-none d-md-block">
                             @Html.ActionLink(
-                                race.FleetShortName + " : Race " + @race.Order + ", " + @race.Date?.ToString("dddd, MMMM d")
+                                race.CalculatedName
                                 , "Details", new { id = race.Id })
                         </span>
                     </td>
