--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -1,6 +1,8 @@
 ﻿@using SailScores.Web.Models.SailScores;
 @using SailScores.Core.Model;
 @using SailScores.Core.FlatModel;
+@using SailScores.Api.Enumerations;
+
 @model ClubItemViewModel<Series>
 
 @{
@@ -9,7 +11,7 @@
 }
 
 <h2>@Model.Item.Name</h2>
-@Model.Item.FlatResults.Races.Count() races 
+@Model.Item.FlatResults.NumberOfSailedRaces races sailed 
 with @Model.Item.FlatResults.NumberOfDiscards discards, 
 @Model.Item.FlatResults.Competitors.Count() competitors
 <div class="table-responsive-sm">
@@ -23,44 +25,83 @@ with @Model.Item.FlatResults.NumberOfDiscards discards,
                 <th scope="col" class="text-center">Total</th>
                 @foreach (var race in Model.Item.FlatResults?.Races ?? Enumerable.Empty<FlatRace>())
                 {
+
                     <th class="text-center">
                         @Html.ActionLink(
-                           @race.Date?.ToString("M-d") + " R" + @race.Order
-                           , "Details", "Race", new { id = race.Id })
+@race.Date?.ToString("M-d") + " R" + @race.Order
+, "Details", "Race", new { id = race.Id })
                     </th>
                 }
             </tr>
         </thead>
         <tbody>
-
-            @foreach (var comp in Model.Item.FlatResults?.Competitors ?? Enumerable.Empty<FlatCompetitor>())
+            @{ var firstRow = true;
+                var compList = Model.Item.FlatResults?.Competitors;
+                if (compList == null || compList.Count() == 0) {
+                    compList = new List<FlatCompetitor>{
+                        new FlatCompetitor {
+                            Name= "No competitors"}
+                        };
+                } 
+            }
+            @foreach (var comp in compList)
             {
-                <tr>
-                    <th scope="row">@Model.Item.FlatResults.GetScore(comp).Rank</th>
-                    <th scope="row">@comp.SailNumber</th>
-                    <th scope="row">@comp.Name</th>
-                    <td>@comp.BoatName</td>
-                    <td scope="row" class="text-center"><strong>@Model.Item.FlatResults.GetScore(comp).TotalScore</strong></td>
+            <tr>
+                <th scope="row">@Model.Item.FlatResults.GetScore(comp)?.Rank</th>
+                <th scope="row">@comp.SailNumber</th>
+                <th scope="row">@comp.Name</th>
+                <td>@comp.BoatName</td>
+                <td scope="row" class="text-center"><strong>@Model.Item.FlatResults.GetScore(comp)?.TotalScore</strong></td>
 
-                    @foreach (var race in Model.Item.FlatResults.Races)
+                @foreach (var race in Model.Item.FlatResults.Races)
+                {
+                    if (race.State == RaceState.Canceled)
+                    {
+                        if (firstRow)
+                        {
+                            <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="canceled">
+                                <span>CANCELED</span>
+                            </td>
+                        }
+                    }
+                    else if (race.State == RaceState.Scheduled)
+                    {
+                        if (firstRow)
+                        {
+                            <td rowspan="@(Model.Item.FlatResults?.Competitors?.Count() ?? 1)" class="scheduled">
+                                <span>SCHEDULED</span>
+                            </td>
+                        }
+                    }
+                    else
                     {
                         var result = Model.Item.FlatResults.GetScore(comp, race);
-                        <td class="text-center @(result?.Place == 1 ? "finish-first":"") @(result?.Place == 2 ? "finish-second":"") @(result?.Place == 3 ? "finish-third":"") ">
-                            @if (result.Discard)
-                            {
-                                @Html.Raw("<span class='text-muted'>")
-                                @Html.Raw("<s>")
-                            }
-                            @result
-                            @if (result.Discard)
-                            {
-                                @Html.Raw("</s>")
-                                @Html.Raw("</span>")
+                        @if (result != null)
+                        {
+                            <td class="text-center @(result?.Place == 1 ? "finish-first " : "") @(result?.Place == 2 ? "finish-second " : "") @(result?.Place == 3 ? "finish-third " : "") ">
+                                @if (result.Discard)
+                                {
+                                    @Html.Raw("<span class='text-muted'>")
+                                    @Html.Raw("<s>")
+                                }
+                                @result
+                                @if (result.Discard)
+                                {
+                                    @Html.Raw("</s>")
+                                    @Html.Raw("</span>")
 
-                            }
-                        </td>
+                                }
+                            </td>
+                        }
+                        else
+                        {
+                            <td></td>
+
+                        }
                     }
-                </tr>
+                    firstRow = false;
+                }
+            </tr>
             }
 
         </tbody>
