--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -5,8 +5,7 @@
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h4>Adding a new race</h4>
-
+<h4>Add a new race</h4>
 
 <hr />
 <div class="row">
@@ -20,7 +19,8 @@
         </div>
         <div class="form-group">
             <label asp-for="Date" class="control-label"></label>
-            <input asp-for="Date" class="form-control" />
+            <input id="date" asp-for="Date" class="form-control"
+                   onchange="window.SailScores.loadSeriesOptions()" />
             <span asp-validation-for="Date" class="text-danger"></span>
         </div>
         <div class="form-group">
@@ -28,6 +28,14 @@
             <input asp-for="Order" class="form-control" />
             <span asp-validation-for="Order" class="text-danger"></span>
         </div>
+
+        <div class="form-group">
+            <label asp-for="State" class="control-label"></label>
+            <select id="fleetType" asp-for="State" class="form-control"
+                    asp-items="@(Html.GetEnumSelectList<SailScores.Api.Enumerations.RaceState>())"></select>
+            <span asp-validation-for="State" class="text-danger"></span>
+        </div>
+
         <div class="form-group">
             <label asp-for="Description" class="control-label">Description<em>&ensp;Optional</em></label>
             <input asp-for="Description" class="form-control" />
