--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -28,6 +28,14 @@
             <input asp-for="Order" class="form-control" />
             <span asp-validation-for="Order" class="text-danger"></span>
         </div>
+
+        <div class="form-group">
+            <label asp-for="State" class="control-label"></label>
+            <select id="fleetType" asp-for="State" class="form-control"
+                    asp-items="@(Html.GetEnumSelectList<SailScores.Api.Enumerations.RaceState>())">
+            </select>
+            <span asp-validation-for="State" class="text-danger"></span>
+        </div>
         <div class="form-group">
             <label asp-for="Description" class="control-label">Description<em>&ensp;Optional</em></label>
             <input asp-for="Description" class="form-control" />
