--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -13,7 +13,8 @@
 </h2>
 @if (Model.CanEdit)
 {
-    @Html.ActionLink("Edit", "Edit", "Race", new { id = Model.Item.Id },
+    @Html.ActionLink("Edit", "Edit", "Race",
+    new { id = Model.Item.Id, returnUrl=Context.Request.Path},
         new { @class = "btn btn-outline-primary btn-sm" })
 }
 <h4>
