Smaller heading for club page

--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -5,8 +5,7 @@
 }
 <div class="row">
     <div class="col-12">
-        <h1 class="d-md-none display-2">@Model.Name</h1>
-        <h1 class="d-none d-md-block display-3">@Model.Name</h1>
+        <h1 class="display-4">@Model.Name</h1>
     </div>
 </div>
 @if (!String.IsNullOrWhiteSpace(Model.Url))
