--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -21,7 +21,7 @@ with @Model.Item.FlatResults.NumberOfDiscards discards,
                 <th scope="col">Place</th>
                 <th scope="col">Sail</th>
                 <th scope="col">Helm</th>
-                <th scope="col">Boat</th>
+                <th scope="col" class="d-none d-sm-table-cell">Boat</th>
                 <th scope="col" class="text-center">Total</th>
                 @foreach (var race in Model.Item.FlatResults?.Races ?? Enumerable.Empty<FlatRace>())
                 {
@@ -31,6 +31,10 @@ with @Model.Item.FlatResults.NumberOfDiscards discards,
 @race.Date?.ToString("M-d") + " R" + @race.Order
 , "Details", "Race", new { id = race.Id })
                     </th>
+                }
+                @if ((Model.Item.FlatResults?.Races?.Count() ?? 0) > 4)
+                {
+                    <th scope="col" class="d-table-cell d-md-none">Helm</th>
                 }
             </tr>
         </thead>
@@ -50,7 +54,7 @@ with @Model.Item.FlatResults.NumberOfDiscards discards,
                 <th scope="row">@Model.Item.FlatResults.GetScore(comp)?.Rank</th>
                 <th scope="row">@comp.SailNumber</th>
                 <th scope="row">@comp.Name</th>
-                <td>@comp.BoatName</td>
+                <td class="d-none d-sm-table-cell">@comp.BoatName</td>
                 <td scope="row" class="text-center"><strong>@Model.Item.FlatResults.GetScore(comp)?.TotalScore</strong></td>
 
                 @foreach (var race in Model.Item.FlatResults.Races)
@@ -98,6 +102,11 @@ with @Model.Item.FlatResults.NumberOfDiscards discards,
                             <td></td>
                         }
                     }
+
+                }
+                @if ((Model.Item.FlatResults?.Races?.Count() ?? 0) > 4)
+                {
+                    <th class="d-table-cell d-md-none">@comp.Name</th>
                 }
                 @{firstRow = false;
                 }
